Do not crash if KDE platform integration is loaded but SNI is unavailable

Checking for the KDE session is not enough as the KDE platform integration can be used
outside of KDE if the QT_QPA_PLATFORMTHEME environment variable is set to 'kde'.

BUG: 350785